--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,10 @@
           <div class="after"></div><a class="logo crls__logo" href="#"><i class="logo_main wow fadeInLeft"></i><i class="logo_name wow fadeInRight"></i></a><a class="crls_menu" id="menuOpen"><span class="btt-menu"><i></i><i></i><i></i></span><span class="txt">меню</span></a>
         </div>
         <div class="crls-cl crls-tr wow fadeIn" data-wow-delay=".22s">
-          <div class="crls__langs"><a class="text-white" href="#">Eng</a><span>Rus°</span></div><a class="crls__call callOpen"><span class="btt-call"><i class="icn icn-hand"></i></span><span class="txt">связаться</span></a>
+          <div class="crls__langs"><a class="text-white" href="#">Eng</a><span>Rus°</span></div><a class="crls__call callOpen"><span class="btt-call"><span>
+                <svg class="icon icon-hand ">
+                  <use xlink:href="img/svg/sprite.svg#hand"></use>
+                </svg></span></span><span class="txt">связаться</span></a>
         </div>
         <div class="crls-cl crls-bl wow fadeIn hidden" data-wow-delay=".22s">
           <ul class="crls_pgs">
@@ -161,7 +164,7 @@
                           </div>
                         </div>
                         <div class="col-md wow fadeInRight" data-wow-delay="0.52s">
-                          <div class="prm_pht"><img src="#" data-src="img/head-img-1.png" alt=""/></div>
+                          <div class="prm_pht"><img src="img/head-img-1.png" alt=""/></div>
                         </div>
                       </div>
                       <div class="d-md-none">
@@ -197,7 +200,7 @@
                           </div>
                         </div>
                         <div class="col-md wow fadeInRight" data-wow-delay="0.52s">
-                          <div class="prm_pht"><img src="#" data-src="img/head-img-2.png" alt=""/></div>
+                          <div class="prm_pht"><img src="img/head-img-2.png" alt=""/></div>
                         </div>
                       </div>
                       <div class="d-md-none">
@@ -231,7 +234,7 @@
                           </div>
                         </div>
                         <div class="col-md wow fadeInRight" data-wow-delay="0.52s">
-                          <div class="prm_pht"><img src="#" data-src="img/head-img-3.png" alt=""/></div>
+                          <div class="prm_pht"><img src="img/head-img-3.png" alt=""/></div>
                         </div>
                       </div>
                       <div class="d-md-none">
@@ -264,7 +267,7 @@
                           </div>
                         </div>
                         <div class="col-md wow fadeInRight" data-wow-delay="0.52s">
-                          <div class="prm_pht"><img src="#" data-src="img/head-img-4.png" alt=""/></div>
+                          <div class="prm_pht"><img src="img/head-img-4.png" alt=""/></div>
                         </div>
                       </div>
                       <div class="d-md-none">
@@ -299,7 +302,7 @@
                           </div>
                         </div>
                         <div class="col-md wow fadeInRight" data-wow-delay="0.52s">
-                          <div class="prm_pht img-mr"><img src="#" data-src="img/head-img-5.png" alt=""/></div>
+                          <div class="prm_pht img-mr"><img src="img/head-img-5.png" alt=""/></div>
                         </div>
                       </div>
                       <div class="d-md-none">
@@ -333,7 +336,7 @@
                           </div>
                         </div>
                         <div class="col-md wow fadeInRight" data-wow-delay="0.52s">
-                          <div class="prm_pht"><img src="#" data-src="img/head-img-6.png" alt=""/></div>
+                          <div class="prm_pht"><img src="img/head-img-6.png" alt=""/></div>
                         </div>
                       </div>
                       <div class="d-md-none">
@@ -351,9 +354,6 @@
                   <!-- +e.slide.swiper-slide-->
               </div>
               <div class="prm__pagin swiper-pagination swiper-pagination-bullets">
-                <div class="swiper-pagination-dot wrapper-dot  " tabindex="0" role="button" aria-label="Go to slide 1"></div>
-                <div class="swiper-pagination-dot wrapper-dot " tabindex="1" role="button" aria-label="Go to slide 2"></div>
-                <div class="swiper-pagination-dot wrapper-dot " tabindex="2" role="button" aria-label="Go to slide 3"></div>
               </div>
             </div>
           </div>
@@ -486,7 +486,7 @@
         <section class="s-about section">
           <div class="container">
             <div class="row">
-              <div class="col-xxl-9 col-xl-8 col-lg-7">
+              <div class="col-xl-8 col-lg-7">
                 <div class="s-about__text-block">
                   <div class="section-title">
                     <h2>Дизайн-Студия Dino</h2>
@@ -561,22 +561,6 @@
                           </div>
                         </div>
                         <div class="s-team__slide-sm swiper-slide">
-                          <div class="s-team__img-wrap-sm"><img src="#" data-src="img/team-1.png" alt=""/>
-                          </div>
-                        </div>
-                        <div class="s-team__slide-sm swiper-slide">
-                          <div class="s-team__img-wrap-sm"><img src="#" data-src="img/team-1.png" alt=""/>
-                          </div>
-                        </div>
-                        <div class="s-team__slide-sm swiper-slide">
-                          <div class="s-team__img-wrap-sm"><img src="#" data-src="img/team-2.png" alt=""/>
-                          </div>
-                        </div>
-                        <div class="s-team__slide-sm swiper-slide">
-                          <div class="s-team__img-wrap-sm"><img src="#" data-src="img/team-2.png" alt=""/>
-                          </div>
-                        </div>
-                        <div class="s-team__slide-sm swiper-slide">
                           <div class="s-team__img-wrap-sm"><img src="#" data-src="img/team-2.png" alt=""/>
                           </div>
                         </div>
@@ -585,31 +569,7 @@
                           </div>
                         </div>
                         <div class="s-team__slide-sm swiper-slide">
-                          <div class="s-team__img-wrap-sm"><img src="#" data-src="img/team-3.png" alt=""/>
-                          </div>
-                        </div>
-                        <div class="s-team__slide-sm swiper-slide">
-                          <div class="s-team__img-wrap-sm"><img src="#" data-src="img/team-3.png" alt=""/>
-                          </div>
-                        </div>
-                        <div class="s-team__slide-sm swiper-slide">
                           <div class="s-team__img-wrap-sm"><img src="#" data-src="img/team-4.png" alt=""/>
-                          </div>
-                        </div>
-                        <div class="s-team__slide-sm swiper-slide">
-                          <div class="s-team__img-wrap-sm"><img src="#" data-src="img/team-4.png" alt=""/>
-                          </div>
-                        </div>
-                        <div class="s-team__slide-sm swiper-slide">
-                          <div class="s-team__img-wrap-sm"><img src="#" data-src="img/team-4.png" alt=""/>
-                          </div>
-                        </div>
-                        <div class="s-team__slide-sm swiper-slide">
-                          <div class="s-team__img-wrap-sm"><img src="#" data-src="img/team-5.png" alt=""/>
-                          </div>
-                        </div>
-                        <div class="s-team__slide-sm swiper-slide">
-                          <div class="s-team__img-wrap-sm"><img src="#" data-src="img/team-5.png" alt=""/>
                           </div>
                         </div>
                         <div class="s-team__slide-sm swiper-slide">
