--- a/public/02-servise.html
+++ b/public/02-servise.html
@@ -127,7 +127,7 @@
                         <li><a class="s-servises__link" href="#">Сайт визитка</a>
                         </li>
                       </ul>
-                      <div class="s-servises__img-wrap"><img class="res-i lazy" src="#" data-src="img/servises-1.png"/>
+                      <div class="s-servises__img-wrap"><img class="res-i" src="img/servises-1.png"/>
                       </div>
                     </div>
                   </div>
@@ -151,7 +151,7 @@
                         <li><a class="s-servises__link" href="#">Наружная реклама</a>
                         </li>
                       </ul>
-                      <div class="s-servises__img-wrap"><img class="res-i lazy" src="#" data-src="img/servises-2.png"/>
+                      <div class="s-servises__img-wrap"><img class="res-i" src="img/servises-2.png"/>
                       </div>
                     </div>
                   </div>
@@ -169,7 +169,7 @@
                         <li><a class="s-servises__link" href="#">Упаковка бизнеса</a>
                         </li>
                       </ul>
-                      <div class="s-servises__img-wrap"><img class="res-i lazy" src="#" data-src="img/servises-3.png"/>
+                      <div class="s-servises__img-wrap"><img class="res-i" src="img/servises-3.png"/>
                       </div>
                     </div>
                   </div>
@@ -221,7 +221,7 @@
                 <button class="form-wrap__btn btt btn-block btt-blue" type="button">Получить оценку проекта
                 </button>
                 <div class="form-wrap__polite">
-                  <label class="custom-input"><input class="custom-input__input" type="checkbox" checked="checked"/><span class="custom-input__lab"></span><span class="custom-input__text text-white">Отправляя заявку, я&nbsp;даю согласие на&nbsp;обработку персональных данных и&nbsp;соглашаюсь с&nbsp;политикой конфиденциальности</span>
+                  <label class="custom-input"><input class="custom-input__input" type="checkbox"/><span class="custom-input__lab"></span> <span class="custom-input__text text-white">Отправляя заявку, я&nbsp;даю согласие на&nbsp;обработку персональных данных и&nbsp;соглашаюсь с&nbsp;политикой конфиденциальности</span>
                   </label>
                 </div>
                 <div class="crls__nav-scls scls"> <a href="#">
@@ -281,7 +281,7 @@
         </div>
         <!-- +e.input-wrap--><input class="form-wrap__btn btn btn-block btn-warning mb-4" type="submit" value="Рассчитать"/>
         <div class="form-wrap__polite">
-          <label class="custom-input"><input class="custom-input__input" type="checkbox" checked="checked"/><span class="custom-input__lab"></span><span class="custom-input__text text-white">Отправляя заявку, я&nbsp;даю согласие на&nbsp;обработку персональных данных и&nbsp;соглашаюсь с&nbsp;политикой конфиденциальности</span>
+          <label class="custom-input"><input class="custom-input__input" type="checkbox"/><span class="custom-input__lab"></span> <span class="custom-input__text text-white">Отправляя заявку, я&nbsp;даю согласие на&nbsp;обработку персональных данных и&nbsp;соглашаюсь с&nbsp;политикой конфиденциальности</span>
           </label>
         </div>
       </form>
