--- a/public/04-article.html
+++ b/public/04-article.html
@@ -341,7 +341,7 @@
         </div>
         <!-- +e.input-wrap--><input class="form-wrap__btn btn btn-block btn-warning mb-4" type="submit" value="Рассчитать"/>
         <div class="form-wrap__polite">
-          <label class="custom-input"><input class="custom-input__input" type="checkbox" checked="checked"/><span class="custom-input__lab"></span><span class="custom-input__text text-white">Отправляя заявку, я&nbsp;даю согласие на&nbsp;обработку персональных данных и&nbsp;соглашаюсь с&nbsp;политикой конфиденциальности</span>
+          <label class="custom-input"><input class="custom-input__input" type="checkbox"/><span class="custom-input__lab"></span> <span class="custom-input__text text-white">Отправляя заявку, я&nbsp;даю согласие на&nbsp;обработку персональных данных и&nbsp;соглашаюсь с&nbsp;политикой конфиденциальности</span>
           </label>
         </div>
       </form>
