--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
       <!-- / CRLS-->
       <div class="crls">
         <div class="crls__form call crls__form-main" id="callWrap">
+          <div class="call__bg"></div>
           <div class="call__inner"><a class="btt-close callClose"><span>Закрыть</span><i class="icn icn-close"></i></a>
             <div class="call__ttl ttl-bord">
               <h4><span class="thm">Упаковка</span><br>бизнеса</h4>
@@ -116,7 +117,8 @@
           <div class="after"></div><a class="logo crls__logo" href="#"><i class="logo_main wow fadeInLeft"></i><i class="logo_name wow fadeInRight"></i></a><a class="crls_menu" id="menuOpen"><span class="btt-menu"><i></i><i></i><i></i></span><span class="txt">меню</span></a>
         </div>
         <div class="crls-cl crls-tr wow fadeIn" data-wow-delay=".22s">
-          <div class="crls__langs"><a class="text-white" href="#">Eng</a><span>Rus</span></div><a class="crls__call callDown" href="#s-form"><span class="btt-call"><span>
+          <div class="crls__langs"><span class="crls__current text-white">Eng</span><a href="#">Rus</a>
+          </div><a class="crls__call callDown" href="#s-form"><span class="btt-call"><span>
                 <svg class="icon icon-hand2 ">
                   <use xlink:href="img/svg/sprite.svg#hand2"></use>
                 </svg></span></span><span class="txt">связаться</span></a>
@@ -360,7 +362,7 @@
         </section>
         <!-- .Promo /-->
         <!-- / .Works-->
-        <section class="section scrollable fp-auto-height">
+        <section class="wrks-wrap section scrollable fp-auto-height">
           <div class="wrks">
             <div class="d-lg-none text-center">
               <h2>Наши работы</h2>
