add projects and arrow top

--- a/public/02-servise.html
+++ b/public/02-servise.html
@@ -55,7 +55,9 @@
           <div class="container">
             <div class="row">
               <div class="col-2 d-md-none"><a class="crls_menu" id="menuOpen"><span class="btt-menu"><i></i><i></i><i></i></span><span class="txt">меню</span></a></div>
-              <div class="col-md-auto col-8 text-center"><a class="top-nav__logo logo crls__logo" href="#"><i class="logo_main wow fadeInLeft"></i><i class="logo_name wow fadeInRight"></i></a>
+              <div class="col-md-auto col-8 text-center"><a class="top-nav__logo logo crls__logo" href="#">
+                <div class="logo_main wow fadeInLeft"><img class="res-i" src="img/logo-name.svg" alt=""/></div>
+                <div class="logo_name wow fadeInRight"><img class="res-i" src="img/logo.svg" alt=""/></div></a>
               </div>
               <div class="col d-none d-md-block">
                 <ul class="top-nav__nav">
