--- a/public/index.html
+++ b/public/index.html
@@ -114,14 +114,20 @@
           </div>
         </div>
         <div class="crls-cl crls-tl">
-          <div class="after"></div><a class="logo crls__logo" href="#"><i class="logo_main wow fadeInLeft"></i><i class="logo_name wow fadeInRight"></i></a><a class="crls_menu" id="menuOpen"><span class="btt-menu"><i></i><i></i><i></i></span><span class="txt">меню</span></a>
+          <div class="after"><a class="logo logo crls__logo" href="#">
+            <div class="logo_main wow fadeInLeft"><img class="res-i" src="img/logo.svg" alt=""></div>
+            <div class="logo_name wow fadeInRight"><img class="res-i" src="img/logo-name.svg" alt=""></div></a>
+          </div><a class="crls_menu" id="menuOpen"><span class="btt-menu"><i></i><i></i><i></i></span><span class="txt">меню</span></a>
         </div>
         <div class="crls-cl crls-tr wow fadeIn" data-wow-delay=".22s">
           <div class="crls__langs"><span class="crls__current text-white">Eng</span><a href="#">Rus</a>
-          </div><a class="crls__call callDown" href="#s-form"><span class="btt-call"><span>
+          </div><a class="crls__call callDown" href="#s-form"><span class="btt-call"><span class="animate">
                 <svg class="icon icon-hand2 ">
                   <use xlink:href="img/svg/sprite.svg#hand2"></use>
-                </svg></span></span><span class="txt">связаться</span></a>
+                </svg></span></span><span class="txt">связаться</span></a><a class="crls__call callTop d-none" href="#mainHead"><span class="btt-call"><span>
+                <svg class="icon icon-arrow-top ">
+                  <use xlink:href="img/svg/sprite.svg#arrow-top"></use>
+                </svg></span></span><span class="txt">вверх</span></a>
         </div>
         <div class="crls-cl crls-bl wow fadeIn hidden" data-wow-delay=".22s">
           <ul class="crls_pgs">
@@ -389,7 +395,7 @@
             </div>
             <div class="js-tabs wrks__tbs">
               <div class="wrks__tbs-itm" id="tab1">
-                <div class="arn-msnr"><a class="cl cl-7 itm img-bg full-modal-open-js" href="#" style="background-image: url(img/project-1.jpg)" data-img="img/project-mob.jpg"><img src="img/project-1.jpg"/>
+                <div class="arn-msnr"><a class="cl cl-7 itm img-bg full-modal-open-js" href="#" style="background-image: url(img/project-1.jpg)" data-img="img/project-1.jpg"><img src="img/project-1.jpg"/>
                   <div class="itm__more">
                     <div class="ttl-bord">
                       <div class="cl__title">
@@ -397,7 +403,7 @@
                       </div>
                     </div>
                     <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
-                  </div></a><a class="cl cl-5 itm img-bg full-modal-open-js" href="#" style="background-image: url(img/project-2.jpg)" data-img="img/project-mob.jpg"><img src="img/project-2.jpg"/>
+                  </div></a><a class="cl cl-5 itm img-bg full-modal-open-js" href="#" style="background-image: url(img/project-2.jpg)" data-img="img/project-2.jpg"><img src="img/project-2.jpg"/>
                   <div class="itm__more">
                     <div class="ttl-bord">
                       <div class="cl__title">
@@ -407,7 +413,7 @@
                     <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
                   </div></a>
                   <div class="cl-7">
-                    <div class="arn-msnr"><a class="cl cl-7 itm ht6 img-bg full-modal-open-js" href="#" style="background-image: url(img/project-3.jpg)" data-img="img/project-mob.jpg"><img src="img/project-3.jpg"/>
+                    <div class="arn-msnr"><a class="cl cl-7 itm ht6 img-bg full-modal-open-js" href="#" style="background-image: url(img/project-3.jpg)" data-img="img/project-3.jpg"><img src="img/project-3.jpg"/>
                       <div class="itm__more">
                         <div class="ttl-bord">
                           <div class="cl__title">
@@ -416,7 +422,7 @@
                           </div>
                         </div>
                         <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
-                      </div></a><a class="cl cl-5 itm ht6 img-bg full-modal-open-js" href="#" style="background-image: url(img/project-4.jpg)" data-img="img/project-mob.jpg"><img src="img/project-4.jpg"/>
+                      </div></a><a class="cl cl-5 itm ht6 img-bg full-modal-open-js" href="#" style="background-image: url(img/project-4.jpg)" data-img="img/project-4.jpg"><img src="img/project-4.jpg"/>
                       <div class="itm__more">
                         <div class="ttl-bord">
                           <div class="cl__title">
@@ -426,7 +432,7 @@
                           </div>
                         </div>
                         <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
-                      </div></a><a class="cl cl-7 itm ht5 img-bg full-modal-open-js" href="#" style="background-image: url(img/project-5.jpg)" data-img="img/project-mob.jpg"><img src="img/project-5.jpg"/>
+                      </div></a><a class="cl cl-7 itm ht5 img-bg full-modal-open-js" href="#" style="background-image: url(img/project-5.jpg)" data-img="img/project-5.jpg"><img src="img/project-5.jpg"/>
                       <div class="itm__more">
                         <div class="ttl-bord">
                           <div class="cl__title">
@@ -436,7 +442,7 @@
                           </div>
                         </div>
                         <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
-                      </div></a><a class="cl cl-5 itm ht5 img-bg full-modal-open-js" href="#" style="background-image: url(img/project-7.jpg)" data-img="img/project-mob.jpg"><img src="img/project-7.jpg"/>
+                      </div></a><a class="cl cl-5 itm ht5 img-bg full-modal-open-js" href="#" style="background-image: url(img/project-7.jpg)" data-img="img/project-6.jpg"><img src="img/project-7.jpg"/>
                       <div class="itm__more">
                         <div class="ttl-bord">
                           <div class="cl__title"> Листовка   для <span class="thm d-inline-block">сети  кальянных </span> 
@@ -447,7 +453,7 @@
                       </div></a>
                     </div>
                   </div>
-                  <div class="cl-5 cl-5-right"><a class="cl cl-12 itm ht4 img-bg full-modal-open-js" href="#" style="background-image: url(img/project-7.jpg)" data-img="img/project-mob.jpg"><img src="img/project-7.jpg"/>
+                  <div class="cl-5 cl-5-right"><a class="cl cl-12 itm ht4 img-bg full-modal-open-js" href="#" style="background-image: url(img/project-7.jpg)" data-img="img/project-7.jpg"><img src="img/project-7.jpg"/>
                     <div class="itm__more">
                       <div class="ttl-bord">
                         <div class="cl__title"> Продающий сайт   для <span class="thm d-inline-block">кроссфит проекта</span>
@@ -455,7 +461,7 @@
                         </div>
                       </div>
                       <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
-                    </div></a><a class="cl cl-12 itm img-bg full-modal-open-js" href="#" style="background-image: url(img/project-8.jpg)" data-img="img/project-mob.jpg"><img src="img/project-8.jpg"/>
+                    </div></a><a class="cl cl-12 itm img-bg full-modal-open-js" href="#" style="background-image: url(img/project-8.jpg)" data-img="img/project-8.jpg"><img src="img/project-8.jpg"/>
                     <div class="itm__more">
                       <div class="ttl-bord">
                         <div class="cl__title"> Продающий сайт   для <span class="thm d-inline-block">квест-комнаты</span> 
@@ -464,7 +470,7 @@
                       </div>
                       <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
                     </div></a>
-                  </div><a class="cl cl-7 itm img-bg full-modal-open-js" href="#" style="background-image: url(img/project-9.jpg)" data-img="img/project-mob.jpg"><img src="img/project-9.jpg"/>
+                  </div><a class="cl cl-7 itm img-bg full-modal-open-js" href="#" style="background-image: url(img/project-9.jpg)" data-img="img/project-9.jpg"><img src="img/project-9.jpg"/>
                   <div class="itm__more">
                     <div class="ttl-bord">
                       <div class="cl__title">
