add projects and arrow top

--- a/public/index.html
+++ b/public/index.html
@@ -395,7 +395,7 @@
             </div>
             <div class="js-tabs wrks__tbs">
               <div class="wrks__tbs-itm" id="tab1">
-                <div class="arn-msnr"><a class="cl cl-7 itm img-bg full-modal-open-js" href="#" style="background-image: url(img/project-1.jpg)" data-img="img/project-1.jpg"><img src="img/project-1.jpg"/>
+                <div class="arn-msnr"><a class="cl cl-7 itm img-bg full-modal-open-js" href="#" style="background-image: url(img/project-1-sm.jpg)" data-img="img/project-1.jpg"><img src="img/project-1-sm.jpg"/>
                   <div class="itm__more">
                     <div class="ttl-bord">
                       <div class="cl__title">
@@ -403,7 +403,7 @@
                       </div>
                     </div>
                     <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
-                  </div></a><a class="cl cl-5 itm img-bg full-modal-open-js" href="#" style="background-image: url(img/project-2.jpg)" data-img="img/project-2.jpg"><img src="img/project-2.jpg"/>
+                  </div></a><a class="cl cl-5 itm img-bg full-modal-open-js" href="#" style="background-image: url(img/project-2-sm.jpg)" data-img="img/project-2.jpg"><img src="img/project-2-sm.jpg"/>
                   <div class="itm__more">
                     <div class="ttl-bord">
                       <div class="cl__title">
@@ -413,7 +413,7 @@
                     <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
                   </div></a>
                   <div class="cl-7">
-                    <div class="arn-msnr"><a class="cl cl-7 itm ht6 img-bg full-modal-open-js" href="#" style="background-image: url(img/project-3.jpg)" data-img="img/project-3.jpg"><img src="img/project-3.jpg"/>
+                    <div class="arn-msnr"><a class="cl cl-7 itm ht6 img-bg full-modal-open-js" href="#" style="background-image: url(img/project-3-sm.jpg)" data-img="img/project-3.jpg"><img src="img/project-3-sm.jpg"/>
                       <div class="itm__more">
                         <div class="ttl-bord">
                           <div class="cl__title">
@@ -422,7 +422,7 @@
                           </div>
                         </div>
                         <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
-                      </div></a><a class="cl cl-5 itm ht6 img-bg full-modal-open-js" href="#" style="background-image: url(img/project-4.jpg)" data-img="img/project-4.jpg"><img src="img/project-4.jpg"/>
+                      </div></a><a class="cl cl-5 itm ht6 img-bg full-modal-open-js" href="#" style="background-image: url(img/project-4-sm.jpg)" data-img="img/project-4.jpg"><img src="img/project-4-sm.jpg"/>
                       <div class="itm__more">
                         <div class="ttl-bord">
                           <div class="cl__title">
@@ -432,7 +432,7 @@
                           </div>
                         </div>
                         <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
-                      </div></a><a class="cl cl-7 itm ht5 img-bg full-modal-open-js" href="#" style="background-image: url(img/project-5.jpg)" data-img="img/project-5.jpg"><img src="img/project-5.jpg"/>
+                      </div></a><a class="cl cl-7 itm ht5 img-bg full-modal-open-js" href="#" style="background-image: url(img/project-5-sm.jpg)" data-img="img/project-5.jpg"><img src="img/project-5-sm.jpg"/>
                       <div class="itm__more">
                         <div class="ttl-bord">
                           <div class="cl__title">
@@ -442,7 +442,7 @@
                           </div>
                         </div>
                         <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
-                      </div></a><a class="cl cl-5 itm ht5 img-bg full-modal-open-js" href="#" style="background-image: url(img/project-7.jpg)" data-img="img/project-6.jpg"><img src="img/project-7.jpg"/>
+                      </div></a><a class="cl cl-5 itm ht5 img-bg full-modal-open-js" href="#" style="background-image: url(img/project-6-sm.jpg)" data-img="img/project-6.jpg"><img src="img/project-6-sm.jpg"/>
                       <div class="itm__more">
                         <div class="ttl-bord">
                           <div class="cl__title"> Листовка   для <span class="thm d-inline-block">сети  кальянных </span> 
@@ -453,7 +453,7 @@
                       </div></a>
                     </div>
                   </div>
-                  <div class="cl-5 cl-5-right"><a class="cl cl-12 itm ht4 img-bg full-modal-open-js" href="#" style="background-image: url(img/project-7.jpg)" data-img="img/project-7.jpg"><img src="img/project-7.jpg"/>
+                  <div class="cl-5 cl-5-right"><a class="cl cl-12 itm ht4 img-bg full-modal-open-js" href="#" style="background-image: url(img/project--sm7.jpg)" data-img="img/project-7.jpg"><img src="img/project-7-sm.jpg"/>
                     <div class="itm__more">
                       <div class="ttl-bord">
                         <div class="cl__title"> Продающий сайт   для <span class="thm d-inline-block">кроссфит проекта</span>
@@ -461,7 +461,7 @@
                         </div>
                       </div>
                       <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
-                    </div></a><a class="cl cl-12 itm img-bg full-modal-open-js" href="#" style="background-image: url(img/project-8.jpg)" data-img="img/project-8.jpg"><img src="img/project-8.jpg"/>
+                    </div></a><a class="cl cl-12 itm img-bg full-modal-open-js" href="#" style="background-image: url(img/project-8-sm.jpg)" data-img="img/project-8.jpg"><img src="img/project-8-sm.jpg"/>
                     <div class="itm__more">
                       <div class="ttl-bord">
                         <div class="cl__title"> Продающий сайт   для <span class="thm d-inline-block">квест-комнаты</span> 
@@ -470,7 +470,7 @@
                       </div>
                       <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
                     </div></a>
-                  </div><a class="cl cl-7 itm img-bg full-modal-open-js" href="#" style="background-image: url(img/project-9.jpg)" data-img="img/project-9.jpg"><img src="img/project-9.jpg"/>
+                  </div><a class="cl cl-7 itm img-bg full-modal-open-js" href="#" style="background-image: url(img/project-9-sm.jpg)" data-img="img/project-9.jpg"><img src="img/project-9-sm.jpg"/>
                   <div class="itm__more">
                     <div class="ttl-bord">
                       <div class="cl__title">
