add projects and arrow top

--- a/public/index.html
+++ b/public/index.html
@@ -453,7 +453,7 @@
                       </div></a>
                     </div>
                   </div>
-                  <div class="cl-5 cl-5-right"><a class="cl cl-12 itm ht4 img-bg full-modal-open-js" href="#" style="background-image: url(img/project--sm7.jpg)" data-img="img/project-7.jpg"><img src="img/project-7-sm.jpg"/>
+                  <div class="cl-5 cl-5-right"><a class="cl cl-12 itm ht4 img-bg full-modal-open-js" href="#" style="background-image: url(img/project-7-sm.jpg)" data-img="img/project-7.jpg"><img src="img/project-7-sm.jpg"/>
                     <div class="itm__more">
                       <div class="ttl-bord">
                         <div class="cl__title"> Продающий сайт   для <span class="thm d-inline-block">кроссфит проекта</span>
