--- a/public/02-servise.html
+++ b/public/02-servise.html
@@ -259,36 +259,191 @@
         </div>
       </footer>
     </div>
-    <div class="form-wrap zoom-anim-dialog mfp-hide modal-win modal-form" id="modal-call">
-      <form>
-        <div class="text-center">
-          <div class="form-wrap__title h3 ttu">Обратный звонок
+    <div class="zoom-anim-dialog mfp-hide modal-win  " id="modal-team">
+      <!-- / .Team-->
+      <div class="s-team section tm">
+        <div class="container">
+          <div class="section-title text-center">
+            <h2>Наша команда</h2>
+            <p class="text-secondary">Наши команда&nbsp;&mdash; это те&nbsp;люди, которые каждый день решают задачи. Мы&nbsp;прошли вместе больше чем 500&nbsp;проектов. Наш сплоченны коллектив поможет реолизовать задачи в&nbsp;кратчайшие сроки с&nbsp;максимальным результатом.</p>
           </div>
-          <p>Заполните заявку и&nbsp;мы&nbsp;с&nbsp;Вами свяжемся в&nbsp;течении 15&nbsp;минут</p>
+          <div class="tabs"> 
+            <div class="row">
+              <div class="col"></div>
+              <div class="col-xl-7 col-md-8">
+                <div class="tabs__caption">
+                            <div class="s-team__slide-sm tabs__btn active">
+                              <div class="s-team__img-wrap-sm"><img src="img/team-1.png" alt=""/>
+                              </div>
+                            </div>
+                            <div class="s-team__slide-sm tabs__btn">
+                              <div class="s-team__img-wrap-sm"><img src="img/team-2.png" alt=""/>
+                              </div>
+                            </div>
+                            <div class="s-team__slide-sm tabs__btn">
+                              <div class="s-team__img-wrap-sm"><img src="img/team-3.png" alt=""/>
+                              </div>
+                            </div>
+                            <div class="s-team__slide-sm tabs__btn">
+                              <div class="s-team__img-wrap-sm"><img src="img/team-4.png" alt=""/>
+                              </div>
+                            </div>
+                            <div class="s-team__slide-sm tabs__btn">
+                              <div class="s-team__img-wrap-sm"><img src="img/team-5.png" alt=""/>
+                              </div>
+                            </div>
+                </div>
+              </div>
+            </div>
+            <div class="s-team__wrap"> 
+              <div class="s-team__slide tabs__content active">
+                <div class="s-team__item">
+                  <div class="row">
+                    <div class="col-xl-5 col-md-4 align-self-end">
+                      <div class="s-team__img-wrap">
+                        <div class="s-team__title d-md-none text-center">Дмитрий Новиков
+                        </div><img class="res-i" src="img/team-1.png" alt=""/>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="s-team__caption">
+                        <div class="s-team__text">
+                          <div class="text-right">
+                            <div class="s-team__proff">Генеральный директор
+                            </div>
+                          </div>
+                          <div class="s-team__title d-none d-md-block">Дмитрий Новиков
+                          </div>
+                          <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
+                        </div>
+                        <button class="s-team__btn btt btt-md btn-block btt-blue" type="button"><span>О нас</span>
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- / +e.slide.swiper-slide-->
+              <div class="s-team__slide tabs__content">
+                <div class="s-team__item">
+                  <div class="row">
+                    <div class="col-xl-5 col-md-4 align-self-end">
+                      <div class="s-team__img-wrap">
+                        <div class="s-team__title d-md-none text-center">Денис Миловидов
+                        </div><img class="res-i" src="img/team-2.png" alt=""/>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="s-team__caption">
+                        <div class="s-team__text">
+                          <div class="text-right">
+                            <div class="s-team__proff">Арт-директор
+                            </div>
+                          </div>
+                          <div class="s-team__title d-none d-md-block">Денис Миловидов
+                          </div>
+                          <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
+                        </div>
+                        <button class="s-team__btn btt btt-md btn-block btt-blue" type="button"><span>О нас</span>
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- / +e.slide.swiper-slide-->
+              <div class="s-team__slide tabs__content">
+                <div class="s-team__item">
+                  <div class="row">
+                    <div class="col-xl-5 col-md-4 align-self-end">
+                      <div class="s-team__img-wrap">
+                        <div class="s-team__title d-md-none text-center">Алиса Новикова
+                        </div><img class="res-i" src="img/team-3.png" alt=""/>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="s-team__caption">
+                        <div class="s-team__text">
+                          <div class="text-right">
+                            <div class="s-team__proff">Проект менеджер
+                            </div>
+                          </div>
+                          <div class="s-team__title d-none d-md-block">Алиса Новикова
+                          </div>
+                          <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
+                        </div>
+                        <button class="s-team__btn btt btt-md btn-block btt-blue" type="button"><span>О нас</span>
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- / +e.slide.swiper-slide-->
+              <div class="s-team__slide tabs__content">
+                <div class="s-team__item">
+                  <div class="row">
+                    <div class="col-xl-5 col-md-4 align-self-end">
+                      <div class="s-team__img-wrap">
+                        <div class="s-team__title d-md-none text-center">Дмитрий Пощикайло
+                        </div><img class="res-i" src="img/team-4.png" alt=""/>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="s-team__caption">
+                        <div class="s-team__text">
+                          <div class="text-right">
+                            <div class="s-team__proff">SMM менеджер
+                            </div>
+                          </div>
+                          <div class="s-team__title d-none d-md-block">Дмитрий Пощикайло
+                          </div>
+                          <p>Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.<br/>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
+                        </div>
+                        <button class="s-team__btn btt btt-md btn-block btt-blue" type="button"><span>О нас</span>
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- / +e.slide.swiper-slide-->
+              <div class="s-team__slide tabs__content">
+                <div class="s-team__item">
+                  <div class="row">
+                    <div class="col-xl-5 col-md-4 align-self-end">
+                      <div class="s-team__img-wrap">
+                        <div class="s-team__title d-md-none text-center">Андрей Бударинцев
+                        </div><img class="res-i" src="img/team-5.png" alt=""/>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="s-team__caption">
+                        <div class="s-team__text">
+                          <div class="text-right">
+                            <div class="s-team__proff">SEO менеджер
+                            </div>
+                          </div>
+                          <div class="s-team__title d-none d-md-block">Андрей Бударинцев
+                          </div>
+                          <p>Наши команда - это те люди, которые каждый день решают задачи.  Мы прошли вместе больше чем 500 проектов.</p>
+                          <p>Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.</p>
+                        </div>
+                        <button class="s-team__btn btt btt-md btn-block btt-blue" type="button"><span>О нас</span>
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- / +e.slide.swiper-slide-->
+            </div>
+          </div>
         </div>
-        <div class="form-wrap__input-wrap form-group">
-          <label><span class="form-wrap__icon-wrap">
-            <svg class="icon icon-text ">
-              <use xlink:href="img/svg/sprite.svg#text"></use>
-            </svg></span><input class="form-wrap__input form-control" type="Ваше Имя" required="required"/>
-          </label>
-        </div>
-        <!-- +e.input-wrap-->
-        <div class="form-wrap__input-wrap form-group">
-          <label><span class="form-wrap__icon-wrap">
-            <svg class="icon icon-tel ">
-              <use xlink:href="img/svg/sprite.svg#tel"></use>
-            </svg></span><input class="form-wrap__input form-control" type="Ваш телефон" required="required"/>
-          </label>
-        </div>
-        <!-- +e.input-wrap--><input class="form-wrap__btn btn btn-block btn-warning mb-4" type="submit" value="Рассчитать"/>
-        <div class="form-wrap__polite">
-          <label class="custom-input"><input class="custom-input__input" type="checkbox"/><span class="custom-input__lab"></span> <span class="custom-input__text text-white">Отправляя заявку, я&nbsp;даю согласие на&nbsp;обработку персональных данных и&nbsp;соглашаюсь с&nbsp;политикой конфиденциальности</span>
-          </label>
-        </div>
-      </form>
+      </div>
+      <!-- .Team /-->
     </div>
-    <!-- #modal-call-->
+    <!-- #modal-team-->
     <!-- modal-->
     <script src="js/jquery.min.js"></script>
     <script src="libs/jquery-asPieProgress-master/dist/jquery-asPieProgress.min.js"></script>
